@@ -1,19 +1,8 @@
 This is a just a file example to use.
 
-Python 3.8.10 (default, Mar 15 2022, 12:22:08) 
+Python 3.8.10 (default, Mar 15 2022, 12:22:08)
 [GCC 9.4.0] on linux
-Type "help", "copyright", "credits" or "license" for more information.
-22/06/12 09:55:28 WARN Utils: Your hostname, ivo-Lenovo-ideapad-330S-15IKB resolves to a loopback address: 127.0.1.1; using 172.19.0.1 instead (on interface br-c4579dc8f27e)
-22/06/12 09:55:28 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/ivo/Programming_Personal_Projects/Learning_Spark/.spark_env/lib/python3.8/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)
-WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties
-Setting default log level to "WARN".
-To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).
-22/06/12 09:55:29 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
+
 Welcome to
       ____              __
      / __/__  ___ _____/ /__
@@ -22,6 +11,3 @@ Welcome to
       /_/
 
 Using Python version 3.8.10 (default, Mar 15 2022 12:22:08)
-Spark context Web UI available at http://172.19.0.1:4040
-Spark context available as 'sc' (master = local[*], app id = local-1655024130165).
-SparkSession available as 'spark'.
